--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
   <!-- SCRIPTS -->
   <script>
     // ======= CONFIG =======
-    const WEBHOOK_URL  = "https://webhook.gjrservicos.com.br/webhook/lead-smartmarmita"; // troque
+    const WEBHOOK_URL  = "https://n8n.gjrservicos.com.br/webhook-test/lead-smartmarmita"; // troque
     const DOWNLOAD_URL = "https://drive.google.com/uc?export=download&id=1PXjjtpXMKfF4VT458npiSpulp8KTGYVX"; // troque
     const CHECKOUT_URL = "https://pay.kiwify.com.br/lftUD8U";        // troque
 
