--- a/index.html
+++ b/index.html
@@ -314,11 +314,15 @@
           <div class="text-xl font-extrabold" style="color:var(--brand)">R$ 37,90</div>
           <div class="text-xs text-[var(--muted)]">Oferta termina em <span id="timerBar" class="font-semibold tabular-nums">00:00:00</span></div>
         </div>
-        <a id="buyNowBar"
-           class="inline-flex w-full items-center justify-center gap-2 rounded-xl bg-gradient-to-r from-[var(--brand)] via-[var(--brand)] to-[var(--accent)] px-5 py-3 font-bold text-[#071217] glow-cta transition hover:scale-[1.02] focus:outline-none focus:ring-4 sm:w-auto"
-           href="#" aria-label="Comprar versão completa agora">
-          Comprar agora
-        </a>
+        
+<a id="buyNowBar"
+   class="inline-flex w-full items-center justify-center gap-2 rounded-xl bg-gradient-to-r from-[var(--brand)] via-[var(--brand)] to-[var(--accent)] px-5 py-3 font-bold text-[#071217] glow-cta transition hover:scale-[1.02] focus:outline-none focus:ring-4 sm:w-auto"
+   href="https://pay.kiwify.com.br/lftUD8U"
+   target="_blank"
+   aria-label="Comprar versão completa agora">
+  Comprar agora
+</a>
+
       </div>
     </div>
   </div>
