--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
             <a id="buyNow"
                class="mt-5 inline-flex w-full items-center justify-center gap-2 rounded-xl bg-gradient-to-r from-[var(--brand)] via-[var(--brand)] to-[var(--accent)] px-6 py-4 text-lg font-extrabold text-[#081417] glow-cta ring-soft transition hover:scale-[1.02] focus:outline-none focus:ring-4"
-               href="#" aria-label="Comprar versão completa por 37,90">
+               href="https://pay.kiwify.com.br/lftUD8U" aria-label="Comprar versão completa por 37,90">
               <span>Comprar agora por R$ 37,90</span> <span aria-hidden>→</span>
             </a>
             <p class="mt-2 text-center text-[13px] font-semibold" style="color:var(--rose)">⚡ Termina em <span id="timer" class="tabular-nums">00:00:00</span></p>
