--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   <meta name="description" content="SmartMarmita: mini e-book gratuito + versão completa para organizar 5 dias de marmitas saudáveis gastando menos." />
   <link rel="icon" href="smartmarmitafavicon.svg" />
   <script src="https://cdn.tailwindcss.com"></script>
+<!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png" />
+  
   <style>
     html{scroll-behavior:smooth}
-    /* ===== Dark Premium Palette ===== */
     :root{
       --ink:#E6EDF3;       /* texto principal */
       --muted:#9FB1C1;     /* texto secundário */
